2007-01-17  Kai Blin  <kai.blin@gmail.com>
	* model.py: Access to the internal data model.
	* plunger_plugin.py: Interface for all plugins.
	* toolbox.py: Helper functions for reading/writing.
	* plugins/collada.py: A simple importer/exporter for collada.
	* plunger: Actually load a collada xml file, fix up the license text,
	  specify the input and output formats on the command line.
	* tests/mossy_bouldersD.dae: Collada test file contributed by jayr.
	* .gitignore: ignore unneeded files for the personal repository

2007-01-16  Kai Blin  <kai.blin@gmail.com>
	* Initial version.